--- a/Rapport/contents/appendices/Csharpcode.tex
+++ b/Rapport/contents/appendices/Csharpcode.tex
@@ -1,6 +1,2 @@
 \newpage
-\section{C\# code - interface}
-\lstset{language=[Sharp]C}
-\begin{lstlisting}
-
-\end{lstlisting}
+\fixme{Fjern side fra hele rapporten}
