--- a/Rapport/lists/glossary.tex
+++ b/Rapport/lists/glossary.tex
@@ -8,3 +8,4 @@
 \nomenclature{CPLD}{Complex Programmable Logic Devies}
 \nomenclature{RTOS}{Real-Time Operating System} 
 \nomenclature{MOSFET}{Metal-Oxide-Semiconductor-Field-Effect Transistor}
+\nomenclature{TACH}{Tachometer - an instrument measuring the rotation speed of a shaft or disk, as in a motor or other machine}
