Fixes i stort set alt

--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -41,3 +41,8 @@
 	url = {https://en.wikipedia.org/wiki/Speed_of_sound},
 	year = 2016
 }
+@online{HCSR04Datasheet,
+	title = {HC-SR04 data sheet},
+	url = {http://www.micropik.com/PDF/HCSR04.pdf},
+	year = 2011
+}
