--- a/Rapport/contents/conclussion.tex
+++ b/Rapport/contents/conclussion.tex
@@ -1,1 +1,13 @@
-\fixme{Skriv en fucking Conclusion!!. FANDME!}
+The goal of this project has been to modify the robot used in the previous project, to be able to go from A to B while avoid different obstacles on the way. This was done by using feedback from a few ultrasound sensors and using this data to calculate how far away the robot is from any obstacle ahead or to the sides of the robot, and react accordingly.\\
+Furthermore, the project was to include some form of localization, so the robot can return to its course after avoiding an obstacle.\\\\
+
+We had a considerable amount of trouble with the hardware, especially a motor breaking down during system testing, and a driver transistor malfunctioning on the H-bridge. This meant that a lot of time was spent on fixing these, ultimately leading to problems further on.\\\\
+
+The software part went quite smooth, except for the localization part of the code, which was never completed due to time spent fixing faulty hardware. This also resulted in the project not fulfilling all of the requirements in the form of not being able to return to a path towards the goal.\\\\
+
+During the project, a deeper understanding of programming the CPLD through Xilinx ISE WebPACK was achieved. This included setting up logic gates and declaring pin layout of the CPLD.\\
+During the project, we have designed and assembled a PCB consisting of an H-bridge, CPLD with power supply and connectors for the sensors. This has given us an insight into using EAGLE, and problems that lie in designing a PCB.\\
+In addition to this, a lot of time spent fixing problems has given us a further knowledge of using the different measurement tools, including the logic analyzer for an oscilloscope and a current probe.\\\\
+
+The project started out looking positive, with the initial tests showing that the individual parts worked fine on their own. When put together, however, problems started occurring with different parts.\\
+Due to above mentioned problems, the project ended up being unfulfilling when put in the scope of the requirements specified in the beginning of this report.
