--- a/Rapport/contents/formalities/titleSheet.tex
+++ b/Rapport/contents/formalities/titleSheet.tex
@@ -58,7 +58,8 @@ Nikolaj Bilgrau\\
 \hspace{2cm}
 \item { Supervisors:}\\
 Jesper Kristensen\\
-Steffen Vutborg
+Steffen Vutborg\\
+Ib Helmer Nielsen
   
 \end{description}
 }
