--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -27,11 +27,11 @@ As part of its functionality, the robot needs to be able to see objects that are
 The robot is expected to fulfil the previously mentioned tasks on it's own. To do this, a few algorithms are to be utilized. This section will describe some of the ideas and considerations made by the group.\\\\
 To solve the problem of going from A to B, 2 methods have been considered. Both of these assume that both the start and end point are known. The first and simplest method is simply to manually turn the robot towards the goal, and letting the robot drive until it detects the goal. The other, and chosen, method is to know the coordinates for the end compared to where the robot starts.\\\\
 This method also solves the second problem by reading the tach count from the motors, and calculating the distance driven from these. The other method of finding the end point is by using a few sensors in a line sensing fashion, giving the robot some space to work with if the calculations are not perfect.\\\\
-The last problem, obstacle avoidance, only one viable solution was discussed in the group: using 3 ultrasound sensors to detect obstacles around the robot. The placement of these, however, was considered. Due to previous experience with object avoidance, it was chosen to mount 1 sensor in the middle looking forward, and 1 to either side of this, turned 90 degrees. This was chosen over having the side sensors turned 45 degrees because tests in the previous project showed ultrasound sensors to give inconsistent results when reading data from obtuse angles.
+The last problem, obstacle avoidance, only one viable solution was discussed in the group: using 3 ultrasound sensors to detect obstacles around the robot. The placement of these, however, was considered. Due to previous experience with object avoidance, it was chosen to mount 1 sensor in the middle looking forward, and 1 to either side of this, turned 90 degrees(See figure \ref{Hardware_diagram}). This was chosen over having the side sensors turned 45 degrees because tests in the previous project showed ultrasound sensors to give inconsistent results when reading data from obtuse angles.
 
 \begin{figure}[!ht]
 	\centering
 	\includegraphics[width=0.7\textwidth]{figures/sensorMountingTheory.PNG}
 	\caption{\text{Proposed placement of sensors, right shows the chosen placement}}
-	\label{Hardware diagram}
+	\label{Hardware_diagram}
 \end{figure}
