h-bridge test section done

--- a/Rapport/contents/test/CPLD.tex
+++ b/Rapport/contents/test/CPLD.tex
@@ -26,26 +26,34 @@ Bit 3       & 2         & 1       & 0      & Bit 3        & 2          & 1      
 \label{resultsexample}
 \end{table}
 The results are from testing according to the truth table used to create the logic circuit programmed into the CPLD.
-\begin{table}[]
+\begin{table}[h]
 \centering
 \scalebox{0.8}{
 \begin{tabular}{|l|l|l|l|}
 \hline
 \textbf{Logic Input} & \textbf{Expected output} & \textbf{Recieved output} & \textbf{Pass} \\ \hline
+\rowcolor[HTML]{EFEFEF} 
 0000                 & 0101                     & 0101                     & Yes           \\ \hline
 0001                 & 0101                     & 0101                     & Yes           \\ \hline
+\rowcolor[HTML]{EFEFEF} 
 0010                 & 0101                     & 0101                     & Yes           \\ \hline
 0011                 & 0101                     & 0101                     & Yes           \\ \hline
+\rowcolor[HTML]{EFEFEF} 
 0100                 & 0101                     & 0101                     & Yes           \\ \hline
 0101                 & 0101                     & 0101                     & Yes           \\ \hline
+\rowcolor[HTML]{EFEFEF} 
 0110                 & 0101                     & 0101                     & Yes           \\ \hline
 0111                 & 0101                     & 0101                     & Yes           \\ \hline
+\rowcolor[HTML]{EFEFEF} 
 1000                 & 0101                     & 0101                     & Yes           \\ \hline
 1001                 & 0101                     & 0101                     & Yes           \\ \hline
+\rowcolor[HTML]{EFEFEF} 
 1010                 & 0101                     & 0101                     & Yes           \\ \hline
 1011                 & 0101                     & 0101                     & Yes           \\ \hline
+\rowcolor[HTML]{EFEFEF} 
 1100                 & 0000                     & 0000                     & Yes           \\ \hline
 1101                 & 0011                     & 0011                     & Yes           \\ \hline
+\rowcolor[HTML]{EFEFEF} 
 1110                 & 1100                     & 1100                     & Yes           \\ \hline
 1111                 & 1111                     & 1111                     & Yes           \\ \hline
 \end{tabular}}
