fexed benjis cancer fixme

--- a/Rapport/contents/formalities/titleSheet.tex
+++ b/Rapport/contents/formalities/titleSheet.tex
@@ -64,10 +64,11 @@ Ib Helmer Nielsen
 \end{description}
 }
 \begin{description}
-\item { Pages: } \fixme{fix til sidst}
+\item { Pages: } 
 \item { Appendices: } 
 \item { Completed:} 
 \end{description}
+\fixme{fix til sidst}
 \vfill } &
 \parbox{7cm}{
   \vspace{.15cm}
