Fixed ultrasonic stuff

--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -54,9 +54,9 @@ When a robot should be able avoid obstacles it will need a device to inform the 
 
 The way the ultrasound sensor works is by emitting acoustic waves and then waits for the waves to reflect back to the sensor. The waves are often at about 40 kHz and humans are unable to detect the sounds because of the frequencies being above the human audible range.\
 
-What is causing the device to make ultrasonic sound is a piezoelectric crystal. The crystal is receiving a rapid oscillating electrical signal, this causes the crystal to expand and contract and thereby creating a sound wave.\ The sound waves will then after being reflected return to a piezoelectric receiver which can then convert the waves into voltage by using the same method as explained above. \\
+What is causing the device to make ultrasonic sound is a piece of piezoelectric material. The material is receiving a rapid oscillating electrical signal, that causes  it to creating a sound wave.\ The sound waves will then after being reflected return to a piezoelectric receiver which can then convert the waves into voltage by using the same method as explained above. \\
 
-In the scope of the project, the robot will be using "Time of flight" for sensing the distance between itself and the obstacle.\
+In the scope of the project, the robot will be using the speed of sound for sensing the distance between itself and the obstacle.\
 
 The ultrasound sensor only generates pulses of sound instead of an continuous streak of sound waves. to avoid confusion. In high speed situations this will mean there is waiting time limits.\\ 
 
